--- a/package.json
+++ b/package.json
@@ -15,6 +15,13 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.22.0",
-    "eslint-plugin-react-hooks": "^4.2.0"
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "mocha": "^8.3.1"
+  },
+  "dependencies": {
+    "multiparty": "^4.2.2"
+  },
+  "scripts": {
+    "test": "mocha tests/*.spec.js"
   }
 }
